// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FN Components/Notification Notification 1`] = `
<div
  dir="ltr"
>
  
    
  <div
    class="fn-notification"
  >
    
        
    <div
      class="fn-notification__main-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--circle fn-avatar--m fn-avatar--crimson"
      >
        
                
        <div
          class="fn-avatar__initials"
        >
          M
        </div>
        
            
      </div>
      
            
      <div
        class="fn-notification__text-container"
      >
        
                
        <span
          class="fn-notification__title"
        >
          Quo culpa sint aut tempora rerum placeat.
        </span>
        
                
        <span
          class="fn-notification__text"
        >
          Modi doloremque nesciunt nemo delectus cum dignissimos est voluptas commodi.
        </span>
        
            
      </div>
      
            
      <button
        aria-label="More"
        class="fn-button fn-button--layout fn-button--icon-only"
      >
        
                
        <span
          class="sap-icon sap-icon--decline"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fn-notification__button-container"
    >
      
            
      <button
        class="fn-button fn-button--emphasized"
      >
        
                
        <span
          class="sap-icon sap-icon--accept"
        />
        
                
        <span
          class="fn-button__text"
        >
          Approve
        </span>
        
            
      </button>
      
            
      <button
        class="fn-button fn-button--secondary"
      >
        
                
        <span
          class="fn-button__text"
        >
          Reject
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots FN Components/Notification Semantic Notification 1`] = `
<div
  dir="ltr"
>
  
    
  <div
    class="fn-notification fn-notification--positive"
  >
    
        
    <div
      class="fn-notification__semantic-container"
    >
      
            
      <div
        class="fn-object-status fn-object-status--positive"
      >
        
                
        <span
          class="sap-icon sap-icon--status-positive"
        />
        
            
      </div>
      
            
      <span
        class="fn-notification__semantic-title"
      >
        Positive
      </span>
      
        
    </div>
    
        
    <div
      class="fn-notification__main-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--circle fn-avatar--m fn-avatar--crimson"
      >
        
                
        <div
          class="fn-avatar__initials"
        >
          M
        </div>
        
            
      </div>
      
            
      <div
        class="fn-notification__text-container"
      >
        
                
        <span
          class="fn-notification__text"
        >
          Modi doloremque nesciunt nemo delectus cum dignissimos est voluptas commodi.
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-notification__button-container"
    >
      
            
      <button
        class="fn-button fn-button--emphasized"
      >
        
                
        <span
          class="sap-icon sap-icon--accept"
        />
        
                
        <span
          class="fn-button__text"
        >
          Approve
        </span>
        
            
      </button>
      
            
      <button
        class="fn-button fn-button--secondary"
      >
        
                
        <span
          class="fn-button__text"
        >
          Reject
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <br />
  
    
  <div
    class="fn-notification fn-notification--info"
  >
    
        
    <div
      class="fn-notification__semantic-container"
    >
      
            
      <div
        class="fn-object-status fn-object-status--info"
      >
        
                
        <span
          class="sap-icon sap-icon--status-positive"
        />
        
            
      </div>
      
            
      <span
        class="fn-notification__semantic-title"
      >
        Information
      </span>
      
        
    </div>
    
        
    <div
      class="fn-notification__main-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--circle fn-avatar--m fn-avatar--crimson"
      >
        
                
        <div
          class="fn-avatar__initials"
        >
          M
        </div>
        
            
      </div>
      
            
      <div
        class="fn-notification__text-container"
      >
        
                
        <span
          class="fn-notification__text"
        >
          Modi doloremque nesciunt nemo delectus cum dignissimos est voluptas commodi.
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-notification__button-container"
    >
      
            
      <button
        class="fn-button fn-button--emphasized"
      >
        
                
        <span
          class="sap-icon sap-icon--accept"
        />
        
                
        <span
          class="fn-button__text"
        >
          Approve
        </span>
        
            
      </button>
      
            
      <button
        class="fn-button fn-button--secondary"
      >
        
                
        <span
          class="fn-button__text"
        >
          Reject
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <br />
  
    
  <div
    class="fn-notification fn-notification--critical"
  >
    
        
    <div
      class="fn-notification__semantic-container"
    >
      
            
      <div
        class="fn-object-status fn-object-status--critical"
      >
        
                
        <span
          class="sap-icon sap-icon--status-critical"
        />
        
            
      </div>
      
            
      <span
        class="fn-notification__semantic-title"
      >
        Critical
      </span>
      
        
    </div>
    
        
    <div
      class="fn-notification__main-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--circle fn-avatar--m fn-avatar--crimson"
      >
        
                
        <div
          class="fn-avatar__initials"
        >
          M
        </div>
        
            
      </div>
      
            
      <div
        class="fn-notification__text-container"
      >
        
                
        <span
          class="fn-notification__text"
        >
          Modi doloremque nesciunt nemo delectus cum dignissimos est voluptas commodi.
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-notification__button-container"
    >
      
            
      <button
        class="fn-button fn-button--emphasized"
      >
        
                
        <span
          class="sap-icon sap-icon--accept"
        />
        
                
        <span
          class="fn-button__text"
        >
          Approve
        </span>
        
            
      </button>
      
            
      <button
        class="fn-button fn-button--secondary"
      >
        
                
        <span
          class="fn-button__text"
        >
          Reject
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <br />
  
    
  <div
    class="fn-notification fn-notification--negative"
  >
    
        
    <div
      class="fn-notification__semantic-container"
    >
      
            
      <div
        class="fn-object-status fn-object-status--negative"
      >
        
                
        <span
          class="sap-icon sap-icon--status-negative"
        />
        
            
      </div>
      
            
      <span
        class="fn-notification__semantic-title"
      >
        Negative
      </span>
      
        
    </div>
    
        
    <div
      class="fn-notification__main-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--circle fn-avatar--m fn-avatar--crimson"
      >
        
                
        <div
          class="fn-avatar__initials"
        >
          M
        </div>
        
            
      </div>
      
            
      <div
        class="fn-notification__text-container"
      >
        
                
        <span
          class="fn-notification__text"
        >
          Modi doloremque nesciunt nemo delectus cum dignissimos est voluptas commodi.
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fn-notification__button-container"
    >
      
            
      <button
        class="fn-button fn-button--emphasized"
      >
        
                
        <span
          class="sap-icon sap-icon--accept"
        />
        
                
        <span
          class="fn-button__text"
        >
          Approve
        </span>
        
            
      </button>
      
            
      <button
        class="fn-button fn-button--secondary"
      >
        
                
        <span
          class="fn-button__text"
        >
          Reject
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  

</div>
`;
